# ResearchMind

./: .env.example  .gitignore  .researchmind-settings.json  README.md  pyproject.toml  start_researchmind.bat  stop_researchmind.bat
app/: __init__.py  main.py
app/api/routes/: conference_trends.py  papers.py  research_runs.py  settings.py
app/core/: config.py
app/schemas/: __init__.py  conference_trends.py  papers.py  research_runs.py  settings.py
app/services/: research_service.py
app/services/analyzers/: __init__.py  conference_trend_analyzer.py  paper_analyzer.py  research_gap_finder.py  trend_analyzer.py
app/services/collectors/: __init__.py  aaai_source.py  base.py  (+11 more)
app/static/: app.js  conference-trends.js  index.html  selection-state.js  styles.css
app/workflows/: __init__.py  nodes.py  progress.py  state.py
reports/: weekly_report.md  weekly_report_d3ca5a67a7ca43c88080f37cc7c84164.md
researchmind/: pyvenv.cfg
researchmind.egg-info/: SOURCES.txt  requires.txt
researchmind/Scripts/: activate  activate.bat
scripts/: check_collection_chain.py  run_research.py  start_webapp.py  stop_webapp.py
tests/integration/: test_api_research_runs.py  test_api_settings.py  test_cli_smoke.py  test_frontend_shell.py  test_research_service.py  test_workflow_nodes.py
tests/unit/: test_config.py  test_llm_client.py  test_paper_analyzer.py  test_paper_collector.py  test_pubmed_source.py  test_report_generator.py  test_repositories.py  test_research_gap_finder.py  test_research_service.py  test_schemas.py  test_selection_state.js  test_trend_analyzer.py
(+9 files in other folders)
